# Drug-Candidate-Studio

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/app/: history.rs  io.rs  mod.rs  state.rs  theme.rs
src/app/ui/: advanced_viz.rs  candidates.rs  mod.rs  pareto.rs  side_panel.rs  top_bar.rs  visualizations.rs
src/chemistry/: descriptors.rs  druglikeness.rs  mod.rs  scaffolds.rs  similarity.rs  smiles.rs
src/generation/: generator.rs
src/optimization/: mod.rs  objectives.rs  pareto.rs
