[package]
name = "drug-candidate-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui_plot = "0.27"
rand = "0.8"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }